Fixed (hacked :{) horizontal scroll issue on mobile

--- a/vlo-web-app/src/main/less/inc/vlo-common.less
+++ b/vlo-web-app/src/main/less/inc/vlo-common.less
@@ -52,3 +52,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         .text-center();
     }
 }
+
+
+@media (max-width: @screen-xs-max) {
+    /* to fix a bug(?) in bootstrap that causes a horizontal scrollbar to appear on narrow screens */
+    body {
+        overflow-x: hidden;
+    }
+}
